Fix padding in app.css for better alignment

--- a/assets/app.css
+++ b/assets/app.css
@@ -468,7 +468,7 @@ main{
 
   /* compense le padding de .mLeft (padding:14px) pour coller aux bords */
   margin: 8px -14px 6px;
-  padding: 0px -14px 6px;
+  padding: 0px 14px 6px;
 
   border-bottom: 1px solid rgba(255,255,255,.06);
 }
